2013-04-15  Xan Lopez  <xlopez@igalia.com>

        [BlackBerry] ASSERT in StyleResolver::ensureScopeResolver()
        https://bugs.webkit.org/show_bug.cgi?id=114615

        Reviewed by Carlos Garcia Campos.

        Enable the style scoped feature if we have support for it.

        * DumpRenderTree/blackberry/DumpRenderTree.cpp:
        (BlackBerry::WebKit::DumpRenderTree::resetToConsistentStateBeforeTesting):

2013-04-15  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] QtMultimedia not used when GStreamer is not found
        https://bugs.webkit.org/show_bug.cgi?id=111842

        Reviewed by Philippe Normand.

        Fallback to using QtMultimedia when native libraries are not found.

        * qmake/mkspecs/features/features.prf:

2013-04-13  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix attempt for webkitbot. Unicodify everything.

        * Scripts/webkitpy/tool/bot/irc_command.py:
        (Whois.execute):

2013-04-13  Ryosuke Niwa  <rniwa@webkit.org>

        webkitbot should provide full name, email address, and IRC nicknames on whois
        https://bugs.webkit.org/show_bug.cgi?id=114494

        Reviewed by Benjamin Poulain.

        A response like the one below is useless. Improve it:
        webkitbot: rniwa: zdobersek is zdobersek (zandobersek@gmail.com). Why do you ask?

        We now report full name, email address, committer/reviewer status, and IRC nickname.

        Also teach webkitbot how to respond to ping.

        * Scripts/webkitpy/tool/bot/irc_command.py:
        (PingPong): Moved 
        (PingPong.execute):
        (Whois._full_record_and_nick): Renamed and rewritten.
        (Whois.execute):

        * Scripts/webkitpy/tool/bot/irc_command_unittest.py:
        (IRCCommandTest.test_whois): Updated test cases as needed.

        * Scripts/webkitpy/tool/bot/ircbot_unittest.py:
        (IRCBotTest.test_help): Added ping.

        * Scripts/webkitpy/tool/commands/newcommitbot.py: