@@ -1,3 +1,15 @@
+2013-04-15  Manuel Rego Casasnovas  <rego@igalia.com>
+
+        [webkitpy] Use $NUMBER_OF_PROCESSORS in Executive.cpu_count()
+        https://bugs.webkit.org/show_bug.cgi?id=114506
+
+        Reviewed by Philippe Normand.
+
+        * Scripts/webkitpy/common/system/executive.py:
+        (Executive.cpu_count): Modify function in order to use the environment
+        variable $NUMBER_OF_PROCESSORS if it is defined and it is an integer
+        greater than 0.
+
 2013-04-15  Xan Lopez  <xlopez@igalia.com>
 
         [BlackBerry] ASSERT in StyleResolver::ensureScopeResolver()
